# application_tracker

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile_devcontainer  Dockerfile_for_dev_container  README.md  docker-compose-devcontainer.yaml  docker-compose.devcontainer.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: .spaceshiprc.zsh  devcontainer.json  docker-compose.override.yml  post_install.sh  set_up_zsh.sh
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
.github/: copilot-commit-message-instructions.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  developer-story.md  epic.md  user-story.md
.github/prompts/: frontend_seature_sliced_design.prompt.md
.github/workflows/: cd-backend.yml  cd-frontend.yml  cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  base_schemas.py  dependencies.py  main.py  models.py  orm.py  schemas.py  utils.py
backend/app/core/: security.py
backend/app/core/domain/: __init__.py  application.py  company.py  refresh_token.py  user.py  verification_token.py
backend/app/core/dto/: __init__.py  application.py  auth.py  company.py  config.py  oauth.py  user.py
backend/app/core/exceptions/: __init__.py  application.py  auth.py  company.py  generic.py  oauth.py  user.py
backend/app/core/repositories/: __init__.py  application_repository.py  company_repository.py  email_service.py  oauth_provider.py  refresh_token_repository.py  user_repository.py  verification_token_repository.py
backend/app/core/services/: __init__.py  application_service.py  auth_service.py  company_service.py  oauth_service.py  refresh_token_service.py  user_email_service.py  user_service.py  verification_token_service.py
backend/app/db/: __init__.py  config.py
backend/app/db/models/: __init__.py  application.py  config.py  refresh_token.py  user.py  verification_token.py
backend/app/infrastructure/email/: __init__.py  aws_sqs_email_service.py  development_email_service.py  gmail_email_service.py
backend/app/infrastructure/oauth/: __init__.py  google_provider.py  linkedin_provider.py
backend/app/infrastructure/repositories/: __init__.py
backend/app/infrastructure/repositories/slq_alchemy/: application.py  company.py  config.py  refresh_token.py  user.py  verification_token.py
backend/app/infrastructure/security/: __init__.py  password_hasher.py  token_provider.py
backend/app/routers/: application.py  auth.py  company.py  oauth.py  user.py
backend/app/schemas/: __init__.py  application.py  company.py  config.py  user.py
backend/app/tests/: base.py  conftest.py  test_application_endpoints.py  test_auth_endpoints.py  test_company_endpoints.py  test_infrastructure.py  test_oauth_endpoints.py  test_refresh_token_service.py  test_user_endpoints.py
backend/app/tests/db/: conftest.py  test_application.py  test_config.py  test_user.py
backend/app/tests/factories/: __init__.py  application_factory.py  company_factory.py  token_factory.py  user_factory.py
backend/app/tests/schemas/: conftest.py  test_user.py
backend/app/utils/: __init__.py  template_loader.py
backend/migrations/: env.py
backend/migrations/versions/: be1c4ed95eaf_create_tables.py
backend/scripts/: create_db_tables.py
backend/templates/emails/: base.html  duplicate_registration_warning.html  duplicate_registration_warning.txt  resend_activation.html  resend_activation.txt  user_verification.html  user_verification.txt
frontend/: .dockerignore  .gitignore  Dockerfile  biome.json  client_config.ts  components.json  eslint.config.js  index.html  openapi-ts.config.js  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/plugins/zod/: config.ts  plugin.ts  types.d.ts
frontend/src/: App.tsx  client_config.ts  main.tsx  types.ts
frontend/src/app/: App.tsx  AuthProvider.tsx  routeTree.gen.ts  router.tsx
scripts/: build.sh  check-openapi-schema.sh  generate-client.sh
(+165 files in other folders)
