[tool.poetry]
name = "application tracker"
version = "0.1.0"
description = ""
authors = ["Dima Bulavenko <dima99bylovenko@gmail.com>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
email-validator = "^2.2.0"
pyjwt = "^2.10.1"
asyncpg = "^0.30.0"
environs = "^14.1.1"
jinja2 = "^3.1.6"
mangum = "^0.19.0"
awslambdaric = "^3.1.1"
aioboto3 = "^15.5.0"
fastapi = {extras = ["standard"], version = "^0.121.1"}
pwdlib = {extras = ["argon2"], version = "^0.3.0"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
mypy = "^1.14.0"
pytest = "^8.3.4"
pytest-sqlalchemy = "^0.2.1"
coverage = "^7.6.10"
debugpy = "^1.8.12"
ruff = "^0.11.12"
pytest-asyncio = "^1.0.0"
freezegun = "^1.5.3"
types-passlib = "^1.7.7.20250602"
pyinstrument = "^5.1.1"
types-aioboto3 = {extras = ["sqs"], version = "^15.5.0"}
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"**/tests/*"=["S106", "S101"]
[tool.ruff.lint]
extend-select = ["I"]
[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.mypy]
exclude = [
    "app/tests/",
    "test_.*\\.py$",
    ".*_test\\.py$"
]
