[project]
name = "application-tracker-backend"
version = "0.1.0"
description = "Application Tracker backend"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.36,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "environs>=14.1.1,<15.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "mangum>=0.19.0,<0.20.0",
    "pwdlib[argon2]>=0.3.0,<0.4.0",
    "fastapi>=0.135.1",
    "aioboto3>=15.5.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.22",
]

[dependency-groups]
lambda = [
    "awslambdaric>=4.0.0",
]
dev = [
    "fastapi[standard]>=0.135.1",
    "pre-commit>=4.0.1,<5.0.0",
    "mypy>=1.14.0,<2.0.0",
    "pytest>=8.3.4,<9.0.0",
    "pytest-sqlalchemy>=0.2.1,<0.3.0",
    "coverage>=7.6.10,<8.0.0",
    "debugpy>=1.8.12,<2.0.0",
    "ruff>=0.11.12,<0.12.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "freezegun>=1.5.3,<2.0.0",
    "types-passlib>=1.7.7.20250602,<2.0.0",
    "pyinstrument>=5.1.1,<6.0.0",
    "types-aioboto3[sqs]>=15.5.0,<16.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "alembic>=1.18.4,<2.0.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*"=["S106", "S101"]
[tool.ruff.lint]
extend-select = ["I"]
[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.mypy]
exclude = [
    "app/tests/",
    "test_.*\\.py$",
    ".*_test\\.py$"
]
